--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,8 @@ Flask-SQLAlchemy
 Flask-WTF
 Werkzeug
 itsdangerous
-Jinja2>=3.1.2
-MarkupSafe>=2.1.1
+Jinja2
+MarkupSafe
 SQLAlchemy
 WTForms
 pymysql
